<resources>
    <string name="app_name">byyou</string>
    <string name="title_activity_agenda">Agenda</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ol_roberta">Olá, Roberta!</string>
    <string name="todo">TODO</string>
    <string name="pr_xima_sess_o">Próxima sessão:</string>
    <string name="luciana_abdominoplastia">Luciana - Abdominoplastia</string>
    <string name="hor_rio_11_00_12_00">Horário 11:00 - 12:00</string>
    <string name="sess_es_ainda_hoje">Sessões ainda hoje:</string>
    <string name="ses115">Sessão 1/15 - Abdominoplastia</string>
    <string name="ses1152">Sessão 1/15 - Abdominoplastia</string>
    <string name="ses1153">Sessão 1/15 - Abdominoplastia</string>
    <string name="_20h">20h</string>
    <string name="_21h">21h</string>
    <string name="_22h">22h</string>
    <string name="_19h">19h</string>
    <string name="_17h">17h</string>
    <string name="_13h">13h</string>
    <string name="_14h">14h</string>
    <string name="_12h">12h</string>
    <string name="_11h">11h</string>
    <string name="_18h">18h</string>
    <string name="_16h">16h</string>
    <string name="_10h">10h</string>
    <string name="_15h">15h</string>
    <string name="t1">TODO</string>
    <string name="roberta_silveira">Roberta Silveira</string>
    <string name="cirurgi_pl_stica">Cirurgiã Plástica</string>
    <string name="ltimo_atendimento_17_08">Último atendimento: 17/08</string>
    <string name="cadastro_relizado_em_05_01_17">Cadastro relizado em: 05/01/17</string>
    <string name="luciana_dos_santos">Luciana dos Santos</string>
    <string name="plano_health">Plano Health+</string>
    <string name="pr_xima_sess_o_1_15_abdominoplastia">Próxima Sessão: 1/15 - Abdominoplastia</string>
    <string name="ltima_sess_o_3_3_criolip_lise">Última sessão: 3/3 - Criolipólise</string>
    <string name="data_ltima_sess_o_26_07_22">Data última sessão: 26/07/22</string>
    <string name="informa_es">Informações</string>
    <string name="voltar">Voltar</string>
    <string name="paciente">Paciente:</string>
    <string name="profissional">Profissional:</string>
    <string name="todo2">TODO</string>
    <string name="luciana_dos_santos2">Luciana dos Santos</string>
    <string name="iniciar_sess_o">INICIAR SESSÃO</string>
    <string name="mais_informa_es">Mais informações</string>
    <string name="luciana">Luciana</string>
    <string name="luciana2">Luciana</string>
    <string name="luciana3">Luciana</string>
    <string name="luciano">Luciano</string>
    <string name="aparecida">Aparecida</string>
    <string name="aparecida1">Aparecida</string>
    <string name="rodrigo">Rodrigo</string>
    <string name="luciana4">Luciana</string>
    <string name="_20h_">20h</string>
    <string name="_21h_">21h</string>
    <string name="_22h_">22h</string>
    <string name="_19h_">19h</string>
    <string name="_17h_">17h</string>
    <string name="_13h_">13h</string>
    <string name="_14h_">14h</string>
    <string name="_12h_">12h</string>
    <string name="_11h_">11h</string>
    <string name="_18h_">18h</string>
    <string name="_16h_">16h</string>
    <string name="_10h_">10h</string>
    <string name="_15h_">15h</string>
    <string name="sess_es_ainda_hoje_na_cl_nica">Sessões ainda hoje na Clínica:</string>
    <string name="bem_vindo">Bem-Vindo!</string>
    <string name="insira_seu_usu_rio_e_senha">Insira seu Usuário e Senha:</string>
    <string name="usu_rio">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">ENTRAR</string>
    <string name="passo_a_passo">Passo a Passo</string>
    <string name="medi_es">Medições</string>
    <string name="local_da_sess_o">Local da sessão</string>
    <string name="fotos_do_local">Fotos do local</string>
    <string name="iniciar_sess_o2">Iniciar sessão</string>
    <string name="pr_sess_o">Pré sessão</string>
    <string name="dados_da_sess_o">Dados da sessão</string>
    <string name="p_s_sess_o">Pós sessão</string>
    <string name="sess_o_finalizada">Sessão finalizada</string>
    <string name="_2">2.</string>
    <string name="_1">1.</string>
    <string name="_3">3.</string>
    <string name="selecione_o_local_do_procedimento">Selecione o local do procedimento</string>
    <string name="continuar">Continuar</string>
    <string name="todo_">TODO</string>
    <string name="todo_1">TODO</string>
    <string name="local_selecionado_abd_men">Local selecionado: Abdômen</string>
    <string name="pr_sess_o2">Pré sessão</string>
    <string name="luciana_abdominoplastia_sess_o_1_15">Luciana - Abdominoplastia - Sessão 1/15</string>
    <string name="selecione_as_reas_que_ser_o_trabalhadas">Selecione as áreas que serão trabalhadas</string>
    <string name="inferior_direito">Inferior Direito</string>
    <string name="inferior_esquerdo">Inferior Esquerdo</string>
    <string name="superior_direito">Superior Direito</string>
    <string name="superior_esquerdo">Superior Esquerdo</string>
    <string name="medida">Medida</string>
    <string name="adicione_medidas">Adicione medidas</string>
    <string name="local">Local</string>
    <string name="medir_por_foto">Medir por foto</string>
    <string name="medida_em_cm">Medida(em cm)</string>
    <string name="tirar_foto">Tirar foto</string>
    <string name="tirar_foto1">Tirar foto</string>
    <string name="tire_foto_do_local">Tire foto do local</string>
    <string name="preencha_os_dados_sobre_o_equipamento">Preencha os dados sobre o Equipamento</string>
    <string name="dados_da_sess_o1">Dados da sessão</string>
    <string name="comprimento_do_fio">Comprimento do fio</string>
    <string name="comprimento_do_instrumento">Comprimento do instrumento</string>
    <string name="tipo_de_fio">Tipo de fio</string>
    <string name="tipo_de_instrumento">Tipo de instrumento</string>
    <string name="comprimento">Comprimento</string>
    <string name="comprimento1">Comprimento</string>
    <string name="equipamento_abdominoplasty_marking_instrument">Equipamento : Abdominoplasty Marking Instrument</string>
    <string name="p_s_sess_o2">Pós sessão</string>
    <string name="p_s_sess_o4">Pós sessão</string>
    <string name="finalizar">Finalizar</string>
    <string name="medir_por_foto1">Medir por foto</string>
    <string name="medi_o_por_foto">Medição por foto</string>
    <string name="tire_foto_do_local3">Tire foto do local</string>
    <string name="local_selecionado_costas">Local selecionado: Costas</string>
    <string name="_4">4</string>
    <string name="_3_2">3</string>
    <string name="_2_22">2</string>
    <string name="_1_2">1</string>
    <string name="_1_2_2">1</string>
    <string name="_2_2_2">2</string>
    <string name="_3_2_2">3</string>
    <string name="_2_2">4</string>
    <string name="_4_2_2">4</string>
    <string name="local_selecionado_costas_C">Local selecionado: Costas</string>
    <string name="dorsais">Dorsais</string>
    <string name="sacral">Sacral</string>
    <string name="lombar">Lombar</string>
    <string name="cervical">Cervical</string>
</resources>