<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Infos">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="340dp"
        android:layout_height="189dp"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="20sp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView1">

        <ImageView
            android:layout_width="118dp"
            android:layout_height="114dp"
            android:paddingStart="10dp"
            android:src="@drawable/ic_baseline_face_24"
            tools:ignore="RtlSymmetry"
            android:contentDescription="@string/t1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingStart="150dp"
            android:text="@string/roberta_silveira"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:padding="50dp"
            android:paddingStart="160dp"
            android:text="@string/cirurgi_pl_stica"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:paddingStart="18dp"
            android:paddingTop="115dp"
            android:text="@string/ltimo_atendimento_17_08"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:paddingStart="18dp"
            android:paddingTop="140dp"
            android:text="@string/cadastro_relizado_em_05_01_17"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="340dp"
        android:layout_height="189dp"
        android:layout_marginTop="100dp"
        android:padding="10dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="20sp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:layout_width="118dp"
            android:layout_height="114dp"
            android:paddingStart="10dp"
            android:src="@drawable/ic_baseline_face_24"
            tools:ignore="RtlSymmetry"
            android:contentDescription="@string/todo2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingStart="130dp"
            android:text="@string/luciana_dos_santos"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:padding="50dp"
            android:paddingStart="160dp"
            android:text="@string/plano_health"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:paddingTop="105dp"
            android:paddingStart="18dp"
            android:text="@string/pr_xima_sess_o_1_15_abdominoplastia"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:paddingTop="130dp"
            android:paddingStart="18dp"
            android:text="@string/ltima_sess_o_3_3_criolip_lise"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:paddingStart="18dp"
            android:paddingTop="155dp"
            android:text="@string/data_ltima_sess_o_26_07_22"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="40dp"
        android:text="@string/informa_es"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="315dp"
        android:layout_height="52dp"
        android:layout_marginTop="400dp"
        android:text="@string/voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView1"
        app:backgroundTint="#FF0101"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/paciente"
        android:textColor="#A3878484"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/profissional"
        android:textColor="#A3878484"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>